--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpaceX Stuff</title>
   </head>
-  <body></body>
+  <body>
+    <div class="root"></div>
+    <button id="changeState">Click me</button>
+  </body>
 </html>
