--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
   <body>
     <div class="root"></div>
     <button id="changeState">Click me</button>
+    <button id="newButton">Click me2</button>
   </body>
 </html>
