--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <div class="root"></div>
+    <a href="/about" class="nav">about</a>
+    <a href="/" class="nav">home</a>
   </body>
 </html>
