--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SpaceX Stuff</title>
+    <title>FE framework</title>
   </head>
   <body>
     <div class="root"></div>
-    <a href="/about" class="nav">about</a>
-    <a href="/" class="nav">home</a>
+    <!-- <a href="/about" class="nav">about</a>
+    <a href="/" class="nav">home</a> -->
   </body>
 </html>
